--- a/package.json
+++ b/package.json
@@ -1,38 +1,90 @@
 {
+
+  "home": "https://Viswabharathi9.github.io/form-new-proj",
+
   "name": "react-basicpractice",
+
   "version": "0.1.0",
+
   "private": true,
+
   "dependencies": {
+
     "@testing-library/jest-dom": "^5.15.0",
+
     "@testing-library/react": "^11.2.7",
+
     "@testing-library/user-event": "^12.8.3",
+
     "react": "^17.0.2",
+
+    "react-date-picker": "^8.3.5",
+
     "react-dom": "^17.0.2",
+
     "react-scripts": "4.0.3",
+
     "web-vitals": "^1.1.2"
+
   },
+
   "scripts": {
+
+    "predeploy": "npm run build",
+
+    "deploy": "gh-pages -d build",
+
     "start": "react-scripts start",
+
     "build": "react-scripts build",
+
     "test": "react-scripts test",
+
     "eject": "react-scripts eject"
+
   },
+
   "eslintConfig": {
+
     "extends": [
+
       "react-app",
+
       "react-app/jest"
+
     ]
+
   },
+
   "browserslist": {
+
     "production": [
+
       ">0.2%",
+
       "not dead",
+
       "not op_mini all"
+
     ],
+
     "development": [
+
       "last 1 chrome version",
+
       "last 1 firefox version",
+
       "last 1 safari version"
+
     ]
+
+  },
+
+  "devDependencies": {
+
+    "gh-pages": "^3.2.3"
+
   }
+
 }
+
